fix: remove horizontal scroll

--- a/news-api/src/components/view/sources/sources.css
+++ b/news-api/src/components/view/sources/sources.css
@@ -1,9 +1,7 @@
 .sources {
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     width: 100%;
-    height: 120px;
-    overflow: auto;
     align-items: center;
     font:
         300 1em 'Fira Sans',
@@ -17,7 +15,7 @@
     font: inherit;
     line-height: 1;
     margin: 0.5em;
-    padding: 1em 2em;
+    padding: 0.5em 1em;
     color: #70d6ff;
     transition: 0.25s;
     cursor: pointer;
